apps/safeqbit-local-hq/passzilla/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passzilla
  namespace: passzilla
spec:
  type: ClusterIP
  selector:
    app: passzilla
  ports:
    - name: http
      port: 80
      targetPort: 5100
      protocol: TCP
